 - [web] fixed wrong colors assigned to default calendar categories
 - [web] lowered size of headings on small screens
 - [web] fixed scrolling in calendars list on Android
 - [web] keep center list of Calendar module visible on small screens
 - [web] check for duplicate name only if address book name is changed
 - [web] improved detection of URLs and email addresses in text mail parts
 - [core] allow super users to modify any event (#4216)
 - [core] correctly handle the full cert chain in S/MIME
 - [core] handle multidays events in freebusy data
 - [core] avoid exception on recent GNUstep when attached file has no filename (#4702)
 - [core] avoid generating broken DTSTART for the freebusy.ifb file (#4289)
 - [core] consider DAVx5 like Apple Calendar (#4304)

4.0.7 (2019-02-27)
------------------

Bug fixes
 - [web] date validator now handles non-latin characters
 - [web] show the "reply all" button in more situations
 - [web] fixed CSS when printing message in popup window (#4674)
 - [i18n] added missing subject of appointment mail reminders (#4656)

4.0.6 (2019-02-21)
------------------

Enhancements
 - [web] create card from sender or recipient address (#3002, #4610)
 - [web] updated Angular to version 1.7.7
 - [web] restored support for next/previous slot suggestion in attendees editor
 - [web] improved auto-completion display of contacts
 - [web] allow modification of attendees participation role
 - [web] updated Angular Material to version 1.1.13
 - [web] updated CKEditor to version 4.11.2
 - [core] baseDN now accept dynamic domain values (#3685 - sponsored by iRedMail)
 - [core] we now handle optional and non-required attendee states

Bug fixes
 - [web] fixed all-day event dates with different timezone
 - [web] fixed display of Bcc header (#4642)
 - [web] fixed refresh of drafts folder when saving a draft
 - [web] fixed CAS session timeout handling during XHR requests (#4468)
 - [web] reflect active locale in HTML lang attribute (#4660)